fix overflow if ingredients exceed window width

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -25,6 +25,7 @@
 #chips {
     margin: 10px 6px;
     display: flex;
+    flex-wrap: wrap;
     gap: 6px;
     color: white;
 }
